syntax = "proto3";
package trinsic.services;

import "pbmse/pbmse.proto";

enum ResponseStatus {
    SUCCESS = 0;
    WALLET_ACCESS_DENIED = 10;
    WALLET_EXISTS = 11;
    ITEM_NOT_FOUND = 20;
    SERIALIZATION_ERROR = 200;
    UNKNOWN_ERROR = 100;
}

service Common {
    rpc Request(pbmse.EncryptedMessage) returns (pbmse.EncryptedMessage);
}